--- a/hierarch-shrinkage/polls/polls.Rnw
+++ b/hierarch-shrinkage/polls/polls.Rnw
@@ -1,17 +1,38 @@
+\documentclass[12pt,letterpaper]{article}
+\usepackage[utf8]{inputenc}
+\usepackage[margin=.7in]{geometry}
+\usepackage{graphicx}
+\usepackage{titling}
+\usepackage{amsmath}
+\usepackage{amsfonts}
+\usepackage{amssymb}
+\renewcommand{\theenumiv}{\arabic{enumiv}}
+\setlength{\droptitle}{-5em}
+\author{Maurice Diesendruck\vspace{-2ex}}
+\title{StatMod2 - Hierarchical Models and Shrinkage - Polls\vspace{-1ex}}
+\begin{document}
+\maketitle
+
+\section{Summary}
+Albert and Chib (1993) present exact Bayesian methods for posterior sampling
+of binary response data. Where a probit regression would normally be used,
+they augment the model by introducing a left- or right-truncated normal
+variable Z, that corresponds to 1- or 0-valued y response, respectively. 
+In doing so, the model enables standard linear model results for normal-normal
+posteriors, which can be used to find full conditionals for Gibbs sampling.
+
+\includegraphics[height=13cm, keepaspectratio]{polls-mus.png}
+\includegraphics[height=13cm, keepaspectratio]{polls-posterior-mus.png}\\
+\includegraphics[height=5cm, keepaspectratio]{polls-betas.png}
+\includegraphics[height=5cm, keepaspectratio]{polls-tausq.png}\\
+
+\section{Full R Code}
+<<echo=TRUE,eval=FALSE>>=
 # StatMod2 - Polls
 
 library(MASS)
 library(truncnorm)
 library(Hmisc)
-
-#####
-# SUMMARIZE.
-# Albert and Chib (1993) present exact Bayesian methods for posterior sampling
-# of binary response data. Where a probit regression would normally be used,
-# they augment the model by introducing a left- or right-truncated normal
-# variable Z, that corresponds to 1- or 0-valued y response, respectively. 
-# In doing so, the model enables standard linear model results for normal-normal
-# posteriors, which can be used to find full conditionals for Gibbs sampling.
 
 #####
 # LOAD DATA.
@@ -143,4 +164,7 @@ dotchart2(dfx$ev1, labels=dfx$ev2, cex=.7,
          width.factor=2.5, bg="steelblue2", lty=1, lcolor="gray",
          xlab=bquote("Posterior Betas, Node size = "~sqrt(n[i])/2),
          xlim=c(-0.4,0.4))
+@
+\end{document}
+
 
